--- a/views/send_mail/notice.text.erb
+++ b/views/send_mail/notice.text.erb
@@ -1,7 +1,7 @@
 こんにちは深川麻衣です！
 ブログを更新しました(^-^)
 
-#{@title}というタイトルです。
+『<%= @title %>』というタイトルです。
 
 ぜひぜひ、観ていただけたら嬉しいです！
 http://tencarat.com/talent/talent042/diary/
