add confirm view

--- a/views/confirm.slim
+++ b/views/confirm.slim
@@ -1,8 +1,8 @@
 doctype html
 html
   head
-    title="送信画面 深川麻衣ブログ更新通知 - 深川教会"
-    meta name="keywords" content="送信画面 深川麻衣公式ブログ更新通知 - 深川教会"
+    title="確認画面 深川麻衣ブログ更新通知 - 深川教会"
+    meta name="keywords" content="確認画面 深川麻衣公式ブログ更新通知 - 深川教会"
     meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=10.0, user-scalable=yes"
     link rel="stylesheet" type="text/css" href="/stylesheets/lighttaste.css"
     link rel="stylesheet" type="text/css" href="/stylesheets/normalize.css"
@@ -15,9 +15,9 @@ html
           br
           | ブログ更新通知(β)
         p.pt_20
-          | 受信したメールに記載されているURLにアクセスすることで登録が完成します。
+          | 登録が完了いたしました！
           br
-          | メールが届かない場合は迷惑メールを確認してみてください。
+          | テストメールをお送りいたしました。メールが届かない場合は迷惑メールを確認してみてください。
           br
           br
           | 現在はまだβ版運用なので、バグが出たらすいません！！
