change ga-place and title

--- a/views/index.slim
+++ b/views/index.slim
@@ -1,12 +1,19 @@
 doctype html
 html
   head
-    title="深川麻衣ブログ更新通知 - 深川教会"
-    meta name="keywords" content="深川麻衣, ブログ, 深川教会, まいまい, 乃木坂"
+    title="深川麻衣 公式ブログ更新通知サービス - 深川教会"
+    meta name="keywords" content="深川麻衣, ブログ, 公式ブログ, 深川教会, まいまい, 乃木坂, 通知"
     meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=10.0, user-scalable=yes"
     link rel="stylesheet" type="text/css" href="/stylesheets/lighttaste.css"
     link rel="stylesheet" type="text/css" href="/stylesheets/normalize.css"
     link rel="stylesheet" type="text/css" href="/stylesheets/maimai.css"
+    javascript:
+      (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+      (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+      m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+      })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+      ga('create', 'UA-86678701-1', 'auto');
+      ga('send', 'pageview');
   body
   	div.grid_start.mb_100
   	  div.eighty.grid.offset_by_ten.pt_20
@@ -31,11 +38,3 @@ html
   	div.bg_hover
   	div.bg_main
 
-javascript:
-  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-  })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
-
-  ga('create', 'UA-86678701-1', 'auto');
-  ga('send', 'pageview');
