--- a/views/send.slim
+++ b/views/send.slim
@@ -21,7 +21,7 @@ html
           br
           br
           | 現在はまだβ版運用なので、バグが出たらすいません！！
-        a href="https://twitter.com/share" class="twitter-share-button" data-url="http://maimaiblog.nogizaka.co/" data-text="【深川教会】深川麻衣公式ブログの通知アプリを作りました！よかったら是非！" data-via="maimai_kyoukai" data-lang="ja" data-size="large" data-hashtags="深川教会" ツイート
+        a href="https://twitter.com/share" class="twitter-share-button" data-url="http://maimaiblog.nogizaka.co/" data-text="【深川教会】深川麻衣公式ブログの通知アプリを作りました！よかったら是非使ってみてください！" data-via="maimai_kyoukai" data-lang="ja" data-size="large" data-hashtags="深川教会" ツイート
       div.grid_start.tx_centering id="footer"
         | Copyright &copy; 2016 深川教会
     div.bg_hover
